Fix main section

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   </head>
   <body>
     <div class="wrapper">
+      <!------------------------------- Header ---------------------------------->
       <header class="header">
         <div class="header__container">
           <a href="" class="header__logo">SmartSpace</a>
@@ -42,7 +43,8 @@
       </header>
 
       <main class="page">
-        <section class="page__main main-block">
+        <!---------------------------- Main-block ------------------------------->
+        <section class="page__section page__main main-block">
           <div class="main-block__container">
             <div class="main-block__body body-main-block">
               <div class="body-main-block__content content-main-block">
@@ -139,7 +141,14 @@
             </div>
           </div>
         </section>
+        <!----------------------------  ------------------------------->
+
+        <!----------------------------  ------------------------------->
+
+        <!----------------------------  ------------------------------->
+
       </main>
+      <!------------------------------- Footer ---------------------------------->
       <footer class="footer">footer</footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
